# mind-industry

./: .dockerignore  .gitignore  README.md  docker-compose.yml  generate_tech_dataset.py  pyproject.toml  requirements.txt
ablation/retrieval/: get_relevant_passages.py
app/auth/: Dockerfile  Dockerfile.original
app/backend/: Dockerfile  Dockerfile.original  dataset.py  detection.py  init_data.py  main.py  preprocessing.py  requirements.optimized.txt  requirements.txt  utils.py
app/config/: config.yaml
app/frontend/: Dockerfile  Dockerfile.original  __init__.py  auth.py  datasets.py  preprocessing.py  profile.py  views.py
aux_scripts/: create_dplace_dtset.py  create_fever_dtset.py  generate_expanded_tech_dataset.py  generate_fresh_tech_dataset.py  inspect_expanded_dataset.py
bash_scripts/: compare_retrieval.sh  docker_benchmark.sh  eval_retrieval_baseline.sh  eval_retrieval_improved.sh  run_en_de.sh  run_rosie2.sh
config/: config.yaml
docs/: cli_and_mcp_research.md  dataset_comparison_guide.md  detection-improvement-implementation.md  expanded_dataset_creation.md  fresh_dataset_creation.md  rag_retrieval_improvements.md  tech_dataset_creation_log.md  testing_with_synthetic_data.md
docs/deferred_artifacts/: cli_detection_feature.md  cli_ux_improvement_instructions.md  detection_refactor_implementation_guide.md
docs/implementation_artifacts/: cli_ux_improvement_instructions.md  custom_categories_implementation_guide.md  data_erasure_implementation_guide.md  frontend_design_system.md  (+13 more)
notebooks/: visualize_docker_stats.ipynb
tests/: test_ingestion.py
(+52 files in other folders)
