[project]
name = "mind"
version = "0.1.0"
description = ""
authors = [{ name = "Lorena Calvo-Bartolomé & Alonso Madroñal de Mesa" }]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core ML & Data Processing
    "numpy<2.0.0,>=1.18.5",
    "pandas==2.3.2",
    "scipy>=1.9.0",

    # CLI & Configuration
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.0",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",

    # ML/NLP Models & Embeddings
    "transformers==4.56.0",
    "sentence-transformers==5.1.0",
    "scikit-learn==1.7.1",
    "torch==2.8.0",

    # Retrieval & Dense Indexing
    "faiss-cpu",
    "kneed==0.8.5",

    # Topic Modeling Visualization
    "pyLDAvis==3.4.1",

    # LLM Clients
    "openai==1.106.1",
    "ollama==0.5.3",
    "google-genai",

    # Data Processing & Formats
    "datasets==4.0.0",
    "pyarrow==16.1.0",
    "tqdm==4.67.1",
    "dask",

    # Utilities
    "colorama==0.4.6",
    "joblib==1.4.2",
    "Requests==2.32.5",
    "langdetect",
]

[project.optional-dependencies]
nlp-external = ["gensim>=4.0"]
use-cases = ["elasticsearch>=8.0"]

[project.scripts]
mind = "mind.cli.main:app"

[build-system]
requires = ["hatchling>=1.26", "pip>=24"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true